# chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: docker-build.yaml  manual-docker.yaml  pull-request-workflow.yaml  staging-docker.yaml
docker/: backend.dockerfile  docker-compose.yaml  frontend.dockerfile  start-reload.sh  start.sh
docker/service_configs/nginx/: default.conf
k8s/: deployment.yaml  ingress.yaml  managed-certificate.yaml  services.yaml
k8s/gcp-lb/: lb.yaml
pipelines/mistral-7b-streaming/: new_pipeline.py  pipeline.dockerfile  pipeline.yaml
scripts/: setup_hooks.sh
src/backend/: startup.py
src/backend/routes/: run.py
src/frontend/mystic-chat/: package-lock.json  package.json
src/frontend/mystic-chat/pages/: _app.jsx  index.jsx
src/frontend/mystic-chat/public/: index.html  manifest.json  robots.txt
src/frontend/mystic-chat/src/: MasterPage.jsx  Social.jsx
src/frontend/mystic-chat/src/components/Chat/: Chat.jsx  SHStyle.jsx  styles.module.css
src/frontend/mystic-chat/src/components/Footer/: Footer.jsx  Footer.module.css
src/frontend/mystic-chat/src/components/Header/: Header.jsx  styles.module.css
src/frontend/mystic-chat/src/styles/: App.css  Colors.css  Components.css  FlexContainers.css  Notifications.css  Text.css
tests/: test_alive.py
